--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/thatisuday/js-plugin-starter#readme",
   "devDependencies": {
     "@babel/core": "^7.2.2",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/preset-env": "7.3.1",
     "@babel/preset-react": "^7.0.0",
     "autoprefixer": "^8.5.0",
